--- a/pages/menu.html
+++ b/pages/menu.html
@@ -58,15 +58,15 @@
         <br />
         <div class="picture">
           <div class="lunch">
-            <img src="/images/Rectangle-13.jpg" alt="Rancheeros (Tofu)" />
+            <img src="../images/Rectangle-13.jpg" alt="Rancheeros (Tofu)" />
             <p>Rancheeros (Tofu)</p>
           </div>
           <div class="food">
-            <img src="/images/Rectangle-14.jpg" alt="Breakkie Roll" />
+            <img src="../images/Rectangle-14.jpg" alt="Breakkie Roll" />
             <p>Breakkie Roll</p>
           </div>
           <div class="food">
-            <img src="/images/Rectangle-15.jpg" alt="Breakkie Tomato Roll" />
+            <img src="../images/Rectangle-15.jpg" alt="Breakkie Tomato Roll" />
             <p>Breakkie Tomato Roll</p>
           </div>
           <div class="food">
