I made it more responsive

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -57,7 +57,7 @@
         </div>
         <br />
         <div class="picture">
-          <div class="lunch">
+          <div class="food">
             <img src="/images/Rectangle-13.jpg" alt="Rancheeros (Tofu)" />
             <p>Rancheeros (Tofu)</p>
           </div>
