--- a/pages/menu.html
+++ b/pages/menu.html
@@ -4,12 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="../css/menu.css" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v6.1.2/css/all.css"
-    />
     <title>MENU - FOREIGN DISHES</title>
+
+    <!--PUP ICON-->
+    <link rel="shortcut icon" href="images/PUP.ico" type="image/x-icon" />
+    <!--normalize css-->
+    <link rel="stylesheet" href="css/normalize.css" />
+    <!--google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!--online google font-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&family=Mulish&family=Noto+Serif&family=Recursive&display=swap"
+      rel="stylesheet"
+    />
+    <!--local google fonts-->
+    <link rel="stylesheet" href="css/googlefont/fonts.css" />
+    /*custom css*/
+    <link rel="stylesheet" href="../css/menu.css" />
+    <!--online font awesome-->
+    <script
+      src="http:://kit.fontawesome.com/a79427849.js"
+      crossorigin="anonymous"
+    ></script>
+    <!--Local fontawesome-->
+    <link rel="stylesheet" href="css/all.css" />
   </head>
   <body>
     <div class="container">
@@ -39,19 +58,19 @@
         <h2><em>SUSHI DISHES</em></h2>
         <div class="image">
           <div class="food">
-            <img src="/images/Rectangle-9.jpg" alt="Smashed Avo" />
+            <img src="../images/Rectangle-9.jpg" alt="Smashed Avo" />
             <p>Smashed Avo</p>
           </div>
           <div class="food">
-            <img src="/images/Rectangle-10.jpg" alt="Yin & Yang" />
+            <img src="../images/Rectangle-10.jpg" alt="Yin & Yang" />
             <p>Yin & Yang</p>
           </div>
           <div class="food">
-            <img src="/images/Rectangle-11.jpg" alt="PanCakes" />
+            <img src="../images/Rectangle-11.jpg" alt="PanCakes" />
             <p>PanCakes</p>
           </div>
           <div class="food">
-            <img src="/images/Rectangle-12.jpg" alt="Huevos Rancheros" />
+            <img src="../images/Rectangle-12.jpg" alt="Huevos Rancheros" />
             <p>Huevos Rancheros</p>
           </div>
         </div>
@@ -70,7 +89,7 @@
             <p>Breakkie Tomato Roll</p>
           </div>
           <div class="food">
-            <img src="/images/Rectangle-16.jpg" alt="Burrito" />
+            <img src="../images/Rectangle-16.jpg" alt="Burrito" />
             <p>Burrito</p>
           </div>
         </div>
