--- a/pages/cart.html
+++ b/pages/cart.html
@@ -24,8 +24,7 @@
     ></script>
     <!--Local fonts-->
     <!--local fontawesome-->
-    <script src="../js/fontawesome/fonts.js"></script>
-    Local
+    <link rel="stylesheet" href="../css/all.css" />
   </head>
   <body></body>
 </html>
