add new features to the page

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -7,9 +7,9 @@
     <title>MENU - FOREIGN DISHES</title>
 
     <!--PUP ICON-->
-    <link rel="shortcut icon" href="images/PUP.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../images/PUP.ico" type="image/x-icon" />
     <!--normalize css-->
-    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="../css/normalize.css" />
     <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
     <!--local google fonts-->
-    <link rel="stylesheet" href="css/googlefont/fonts.css" />
+    <link rel="stylesheet" href="../css/googlefont/fonts.css" />
     /*custom css*/
     <link rel="stylesheet" href="../css/menu.css" />
     <!--online font awesome-->
@@ -28,7 +28,7 @@
       crossorigin="anonymous"
     ></script>
     <!--Local fontawesome-->
-    <link rel="stylesheet" href="css/all.css" />
+    <link rel="stylesheet" href="../css/all.css" />
   </head>
   <body>
     <div class="container">
